# GTExQuery

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements.txt  whitelist.txt
.github/workflows/: main.yml  release.yaml
docs/: conf.py  custom_temp_file.md  data_handling.md  data_handling_tests.md  index.md  logging.md  logging_tests.md  multithreading.md  multithreading_tests.md  requirements.txt  source.md  testing.md
gtexquery/: __init__.py
gtexquery/data_handling/: biomart.py  process.py  request.py
gtexquery/multithreading/: biomart.py  process.py  request.py
tests/: custom_tmp_file.py
tests/data_handling/: test_biomart.py  test_process.py  test_request.py
tests/logs/: test_get_logger.py
tests/multithreading/: test_biomart.py  test_request.py
