[tool.poetry]
name = "gtexquery"
version = "0.2.0"
description = "Code for handling multithreaded queries for GTEx"
license = "MIT"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
readme = "README.md"
classifiers = [
        "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pandas = "^1.3.0"
openpyxl = "^3.0.7"
bioservices = "^1.7.11"
lxml = "^4.6.3"
aiohttp = ">=3.7.4"
PyYAML = ">=5.4.1"

[tool.poetry.dev-dependencies]
nox = "^2021.6.12"
pre-commit = "^2.13.0"
commitizen = "^2.17.12"
flake8 = "^3.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6.0"
flake8-pytest-style = "^1.5.0"
flake8-spellcheck = "^0.24.0"
darglint = "^1.8.0"
mypy = "^0.910"
isort = "^5.9.2"
black = "^21.6b0"
safety = "^1.10.3"
coverage = "^5.5"
pytest = "^6.2.4"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
typeguard = "^2.12.1"
six = "^1.16.0"
xdoctest = "^0.15.5"
Sphinx = "^4.0.3"
sphinx-rtd-theme = "^0.5.2"
myst-parser = "^0.15.1"
types-requests = "^2.25.0"

[tool.semantic_release]
branch = "main"
version_variable = [
        "gtexquery/__init__.py:__version__",
        "docs/conf.py:version"
]
version_toml = [
        "pyproject.toml:tool.poetry.version"
]
changelog_file = "CHANGELOG.md"
upload_to_pypi = true
upload_to_release = false

[tool.coverage.run]
branch = true
source = ["gtexquery"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = """
-vv
--ignore=docs
--cov=gtexquery
--cov-report=term
--cov-report=xml
--typeguard-packages=scripts
"""

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = false

[tool.flake8]
select = "ANN,B,B9,C,C4,D,DAR,F,S,SC"
ignore = "ANN101,S101"
per-file-ignore = "tests/custom_tmp_file.py:B950"
exclude = "docs/conf.py"
max-line-length = 88
max-complexity = 10
docstring-convention = "numpy"
docstring-style = "numpy"
strictness = "short"
dictionaries = "en_US,python,technical"
spellcheck-targets = "comments"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
